src/objects/Accounts_Receivables__c.object
<CustomObject>
    <description>This is the Accounts Receivable object that is running through the integration</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts Receivables</relationshipLabel>
        <relationshipName>Accounts_Receivables</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Accounts_Receivable_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Accounts Receivable External ID</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <formula>LEFT(Movex_Invoice__c ,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Overdue__c</fullName>
        <description>The number of days overdue</description>
        <formula>IF( ESRECO_Code__c =0,((Today()-1)- Due_Date__c), (Last_Payment_Date__c - Due_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of days overdue</inlineHelpText>
        <label>Days Overdue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Debit__c</fullName>
        <description>Invoice Amount Excl VAT - Open Amount. Created for France to be used in an external Credit Collection system.</description>
        <formula>Invoice_Amount_Excl_VAT__c - Open_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Invoice Amount Excl VAT - Open Amount. Created for France to be used in an external Credit Collection system.</inlineHelpText>
        <label>Debit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>When the Inoice should be paid in full</description>
        <inlineHelpText>When the Inoice should be paid in full</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dunning_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this field is checked, the Invoice is blocked for dunning for different reasons, and not available for reminders</description>
        <inlineHelpText>If this field is checked, the Invoice is blocked for dunning for different reasons, and not available for reminders</inlineHelpText>
        <label>Dunning Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dunning_Level__c</fullName>
        <description>Shows the dunning level (the number of reminders sent out to customer) for this invoice</description>
        <inlineHelpText>Shows the dunning level (the number of reminders sent out to customer) for this invoice</inlineHelpText>
        <label>Dunning Level</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESRECO_Code__c</fullName>
        <description>Describes if the invoice is fully Paid or not
0 = Not/Partly paid
9 = Fully paid</description>
        <inlineHelpText>Describes if the invoice is fully Paid or not
0 = Not/Partly paid
9 = Fully paid</inlineHelpText>
        <label>ESRECO Code</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GDWUniqueKey__c</fullName>
        <description>used by new integration to map data between integration data and Salesforce</description>
        <externalId>true</externalId>
        <label>GDW Unique Key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Invoice_Age_until_fully_paid__c</fullName>
        <description>Calculates the age of the invoice</description>
        <formula>CASE(ESRECO_Code__c, 
0, (today()-1)- Invoice_Date__c, 
9,  Last_Payment_Date__c - Invoice_Date__c ,
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates the age of the invoice</inlineHelpText>
        <label>Invoice Age (until fully paid)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount_Excl_VAT__c</fullName>
        <label>Invoice Amount Excl VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount__c</fullName>
        <description>The original billing amount</description>
        <inlineHelpText>The original billing amount</inlineHelpText>
        <label>Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Overdue__c</fullName>
        <description>Check if the invoice is ovedue (or was overdue when it was fully paid) = 1, if not = 0</description>
        <formula>IF( ESRECO_Code__c =0,  IF( TODAY() &gt; Due_Date__c ,&quot;YES&quot;, &quot;NO&quot;) ,  IF( Last_Payment_Date__c  &gt;  Due_Date__c , &quot;YES&quot;, &quot;NO&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Check if the invoice is ovedue (or was overdue when it was fully paid) = 1, if not = 0</inlineHelpText>
        <label>Invoice Overdue?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Year__c</fullName>
        <description>The Year when the Invoice is placed. For analysis</description>
        <formula>TEXT(YEAR(Invoice_Date__c ))</formula>
        <label>Invoice Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Payment_Date__c</fullName>
        <description>Shows the last payment date of the invoice</description>
        <inlineHelpText>Shows the last payment date of the invoice</inlineHelpText>
        <label>Last Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Movex_Invoice__c</fullName>
        <description>Temp field to check for duplicates. should only be seen by admins</description>
        <formula>LEFT(Accounts_Receivable_External_ID__c,  LEN(Accounts_Receivable_External_ID__c)-8 )</formula>
        <inlineHelpText>Temp field to check for duplicates. should only be seen by admins</inlineHelpText>
        <label>Movex#+Invoice#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Amount__c</fullName>
        <description>The open amount could differ from the billing amount if the customer had payed a part of the bill or if a credit note is booked on the bill</description>
        <inlineHelpText>The open amount could differ from the billing amount if the customer had payed a part of the bill or if a credit note is booked on the bill</inlineHelpText>
        <label>Open Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Invoice Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not/Partly Paid</fullName>
                </value>
                <value>
                    <fullName>Fully Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stop_Date__c</fullName>
        <description>This field indicates when the invoice was stopped for reminders. If the invoice is not stopped the field is blank</description>
        <inlineHelpText>This field indicates when the invoice was stopped for reminders. If the invoice is not stopped the field is blank</inlineHelpText>
        <label>Stop Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VAT_Amount__c</fullName>
        <label>VAT Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Accounts Receivable</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Days_Overdue__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Open_Amount__c</columns>
        <columns>Last_Payment_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>JP_DI_Invoice_Amount</fullName>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Open_Amount__c</columns>
        <columns>Last_Payment_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Fully Paid</value>
        </filters>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>JPY</value>
        </filters>
        <label>JP:DI - Invoice Amount</label>
        <language>ja</language>
        <sharedTo>
            <role>JP_DI_Chubu_RSM</role>
            <role>JP_DI_East_Japan_Supervisor</role>
            <role>JP_DI_Kansai_RSM</role>
            <role>JP_DI_Kita_Kanto_Tohoku_RSM</role>
            <role>JP_DI_Kyushu_RSM</role>
            <role>JP_DI_Minami_Kanto_RSM</role>
            <role>JP_DI_Tokyo_Hokkaido_RSM</role>
            <role>JP_DI_West_Japan_Supervisor</role>
            <role>JP_Managing_Director1</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>POLSKA</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Days_Overdue__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Invoice_Overdue__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Days_Overdue__c</field>
            <operation>greaterThan</operation>
            <value>90</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Not/Partly Paid</value>
        </filters>
        <label>POLSKA</label>
        <language>pl</language>
    </listViews>
    <listViews>
        <fullName>berf_llige_Rechnungen</fullName>
        <columns>Account__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Dunning_Level__c</columns>
        <columns>Dunning_Block__c</columns>
        <columns>Stop_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Invoice_Overdue__c</field>
            <operation>equals</operation>
            <value>WAHR</value>
        </filters>
        <label>Überfällige Rechnungen</label>
        <language>de</language>
        <sharedTo/>
    </listViews>
    <nameField>
        <label>Invoice Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounts Receivables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>